--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -25,9 +25,12 @@ jobs:
     if: github.event_name == 'push' || github.event.pull_request.merged == true
 
     steps:
-    - uses: actions/checkout@v3 
+    - uses: actions/checkout@v3
     - name: Run doc
       run: cargo doc --no-deps
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./target/doc
