--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -11,9 +11,7 @@ env:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Build
@@ -23,7 +21,7 @@ jobs:
 
   doc:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
     steps:
     - uses: actions/checkout@v3
     - name: Run doc
