--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ master ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -12,35 +12,24 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
+    - uses: actions/checkout@v2
     - name: Run tests
       run: cargo test --verbose
 
   doc:
     runs-on: ubuntu-latest
     needs: test
+    if:  github.event_name == 'push' || github.event.pull_request.merged == true
+
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Run doc
       run: cargo doc --no-deps
-    - name: Deploy
-      uses: actions/upload-pages-artifact@v1
-      with:
-        path: target/doc
 
-  deploy:
-     needs: doc
-     permissions:
-       pages: write
-       id-token: write
-     environment:
-       name: github-pages
-       url: ${{ steps.deployment.outputs.page_url }}
-     runs-on: ubuntu-latest
-     steps:
-       - name: Deploy to GitHub Pages
-         id: deployment
-         uses: actions/deploy-pages@v1
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./target/doc/
