--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -9,6 +9,10 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,13 +31,14 @@ jobs:
     - name: Run doc
       run: cargo doc --no-deps
     - name: Deploy
-      uses: actions/upload-pages-artifact@v1
+      uses: actions/upload-pages-artifact@v2
       with:
         path: target/doc
 
   deploy:
     needs: doc
     permissions:
+      contents: read
       pages: write
       id-token: write
     environment:
@@ -43,4 +48,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v2
