--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ description = "競技プログラミング用ライブラリ"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tmp = {path = "./tmp"}
