--- a/static/mylib/Cargo.toml
+++ b/static/mylib/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "cp_library_rs"
+name = "mylib"
 version = "0.1.0"
-edition = "2018"
-license = "MIT"
-description = "競技プログラミング用ライブラリ"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
