--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -32,4 +32,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GH_PAT }}
-        publish_dir: ./target/doc/
+        publish_dir: ./static/target/doc/
