--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ description = "競技プログラミング用ライブラリ"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+math-number-theory = { path = './math-number-theory' }
