--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,9 @@ description = "競技プログラミング用ライブラリ"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-math-number-theory = { path = './math-number-theory' }
+is_prime = {path = "./crates/math/number_theory/is_prime" }
+
+[workspace]
+member = [
+    './crate/math/number_theory/*/'
+]
