--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "cp_library_rs"
 version = "0.1.0"
 edition = "2018"
-license = "MIT"
+license = "CC0-1.0"
 description = "競技プログラミング用ライブラリ"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
