--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ description = "競技プログラミング用ライブラリ"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-is_prime = {path = "./crates/math/number_theory/is_prime" }
+is_prime_ = {path = "./crates/math/number_theory/is_prime_" }
